--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@ button {
   margin-right: 10px;
   cursor: pointer;
   border-radius: 10px;
+  width: 100px;
+  font-weight: bold;
 }
 
 /* Estilo para el botón de encriptar */
