--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,12 @@ textarea {
   width: 100%;
   height: 200px;
   margin-bottom: 10px;
-  padding: 10px;
+  padding: 20px;
   box-sizing: border-box;
-  font-size: 2em;
+  font-size: 1.5em;
+  background: white;
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.1);
+  border-radius: 32px;
 }
 
 /* Estilo para los botones */
